--- a/style.css
+++ b/style.css
@@ -8,3 +8,33 @@
     pointer-events: none;
     display: none;
 }
+
+#gait-animation-container {
+    border: 2px solid black;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 600px;
+    max-height: 600px;
+}
+
+svg#gait-animation {
+    width: 100%;
+    height: 100%;
+    max-width: 300px; /* Adjust as needed */
+    max-height: 300px; /* Adjust as needed */
+    display: block;
+    margin: auto;
+}
+
+#gait-animation-title {
+    margin-top: 10px;
+    font-size: 16px;
+    text-align: center;
+}
+
+svg#gait-animation circle{
+    color: black;
+    fill: black;
+}
