--- a/style.css
+++ b/style.css
@@ -1,14 +1,3 @@
-
-#tooltip {
-    position: absolute;
-    background: white;
-    border: 1px solid black;
-    padding: 0.5em;
-    font-size: 1em;
-    pointer-events: none;
-    display: none;
-}
-
 #gait-animation-container {
     border: 2px solid black;
     padding: 10px;
@@ -37,4 +26,14 @@ svg#gait-animation {
 svg#gait-animation circle{
     color: black;
     fill: black;
+}
+
+select {
+    padding: 5px;
+    width: 200px;
+    margin: 1em;
+}
+label {
+    font-weight: bold;
+    margin-right: 0;
 }
