--- a/style.css
+++ b/style.css
@@ -1,3 +1,100 @@
+#tooltip {
+    position: absolute;
+    background: white;
+    border: 1px solid black;
+    padding: 0.5em;
+    font-size: 1em;
+    pointer-events: none;
+    display: none;
+}
+
+#description-container {
+    text-align: center;
+    margin-bottom: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: all 1s ease-in-out;
+}
+
+#visualization-container {
+    cursor: pointer; /* Make the cursor a pointer to indicate it's clickable */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    height: 600px; /* Adjust height to accommodate all four graphs */
+}
+
+.graph-container {
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.graph-label {
+    font-size: 14px;
+    white-space: nowrap;
+    transition: opacity 0.5s ease-in-out;
+}
+
+#next-step {
+    margin-top: 10px;
+}
+
+#single-walking-path-container,
+#second-walking-path-container {
+    border: 2px solid black;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 600px;
+    max-height: 400px;
+    margin-top: 20px; /* Add some space between the two visualizations */
+}
+
+svg#single-walking-path,
+svg#second-walking-path {
+    width: 100%;
+    height: 100%;
+    max-width: 600px; /* Adjust as needed */
+    max-height: 350px; /* Adjust as needed */
+    display: block;
+    margin: auto;
+}
+
+svg#combined-walking-path,
+svg#second-walking-path,
+svg#third-walking-path,
+svg#fourth-walking-path {
+    width: 100%;
+    height: 100px; /* Adjust height to make only the x-axis visible */
+    max-width: 600px; /* Adjust as needed */
+    display: block;
+    margin: auto;
+    transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+}
+
+svg#second-walking-path {
+    position: absolute;
+    top: 300px; /* Position it below the first graph */
+    opacity: 0;
+}
+
+svg#third-walking-path {
+    position: absolute;
+    top: 300px; /* Position it below the second graph */
+    opacity: 0;
+}
+
+svg#fourth-walking-path {
+    position: absolute;
+    top: 300px; /* Position it below the third graph */
+    opacity: 0;
+}
+
 #gait-animation-container {
     border: 2px solid black;
     padding: 10px;
@@ -23,7 +120,7 @@ svg#gait-animation {
     text-align: center;
 }
 
-svg#gait-animation circle{
+svg#gait-animation circle {
     color: black;
     fill: black;
 }
@@ -33,7 +130,9 @@ select {
     width: 200px;
     margin: 1em;
 }
+
 label {
     font-weight: bold;
     margin-right: 0;
 }
+
