--- a/style.css
+++ b/style.css
@@ -246,7 +246,7 @@ label {
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 900px;
+    max-width: 1100px;
     margin: 20px auto;
 }
 
@@ -290,34 +290,25 @@ label {
     width: 100%;
     margin-bottom: 20px;
 }
-#walking-path-container svg {
-    width: 100%;
-    height: 300px; 
-    max-width: 100%; 
-    display: block;
-    margin: auto;
-    border: 1px solid black;
-}
 #walking-path-container .graph-label {
     font-size: 16px;
     font-weight: bold;
     margin-bottom: 10px;
 }
-#duration-slider-container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
+#walking-path-container .timer {
+    font-size: 14px;
+    color: #333;
+    margin-top: 5px;
 }
-#duration-slider {
-    width: 80%; /* Make the slider take more space */
+
+#walking-path-container .annotation {
+    font-size: 14px;
+    color: #666;
+    margin-top: 10px;
+    text-align: left;
+    max-width: 200px;
 }
-#duration-label {
-    margin-left: 10px;
-    font-size: 16px;
-    font-weight: bold;
-}
+
 #narrative-container {
     text-align: center;
     margin-top: 20px;
@@ -333,7 +324,7 @@ label {
     line-height: 1.6;
 }
 /* Media queries for responsiveness */
-@media (max-width: 940px) {
+/* @media (max-width: 940px) {
     #walking-path-container {
         flex-direction: column; 
     }
@@ -344,4 +335,4 @@ label {
         height: 300px; 
         max-width: 100%; 
     }
-}
+} */
